# ReplAI

./: README.md  package.json  pnpm-lock.yaml
media/: TemporaryLogo.afdesign  square.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clients.rs  config.rs  lib.rs  logger.rs  main.rs
src-tauri/src/clients/: openai.rs
